--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,24 @@
+body {
+	background-color: #026873;
+background-image: linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
+linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
+linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
+linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
+background-size: 13px, 29px, 37px, 53px;
+}
+
+.container {
+	background-color: #fff;
+	max-width: 940px;
+	padding: 10px;
+	margin: 0 auto;
+	border: 1px solid #000;
+}
+
 h1 {
 	text-align: center;
 	display: none;
+	color: #fff;
 }
 
 p {
