--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@ linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
 linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
 linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
 background-size: 13px, 29px, 37px, 53px;
+    font-family: 'Libre Baskerville', serif;
+
+
 }
 
 .container {
@@ -23,7 +26,7 @@ h1 {
 
 p {
 	text-align: center;
-	font-size: 1.2em;
+	/*font-size: 1.1em;*/
 }
 
 dt {
@@ -83,7 +86,7 @@ dd {
 	border: 1px solid black;
 	padding: 5px;
 	margin: 0 auto 1em auto;
-	font-size: 1.1em;
+	/*font-size: 1.0em;*/
 }
 
 .error {
