--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ background-size: 13px, 29px, 37px, 53px;
 
 }
 
+form {
+	text-align: center;
+}
+
 .container {
 	background-color: #fff;
 	max-width: 450px;
