--- a/css/main.css
+++ b/css/main.css
@@ -103,3 +103,25 @@ dd {
 	background-color: #F78181;
 	padding: 1em;
 }
+
+ul.ui-autocomplete {
+  width: 300px;
+  list-style: none;
+  padding: 0;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
+  border-bottom: 1px solid #eee;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+  background-color: #fff;
+}
+
+ul.ui-autocomplete li {
+  padding: 10px;
+  font-size: 20px;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+}
+
+ul.ui-autocomplete li:hover {
+  background-color: #ddd;
+}
