--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ form {
 	margin-bottom: 10px;
 }
 
-.container {
+.results-container {
 	background-color: #fff;
 	max-width: 450px;
 	padding: 10px;
