--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,38 @@ body {
   font-family: 'Libre Baskerville', serif;
 }
 
+/* Mostly: http://ryanfait.com/sticky-footer/ */
+
+/** {
+	margin: 0;
+}*/
+html, body {
+	height: 100%;
+}
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+	margin-bottom: -40px;
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.site-footer, .page-wrap:after {
+  /* .push must be the same height as footer */
+	height: 40px;
+}
+
+.site-footer {
+	text-align: center;
+	font-size: 0.8em;
+	color: #fff;
+}
+
+body p {
+	text-align: center;
+}
+
 form {
 	text-align: center;
 	margin-bottom: 10px;
